# mugshots

./: CODE_OF_CONDUCT.md  LICENSE  README.md
mugshots/: Cargo.toml  spec.md
mugshots/photo.bckup/: metadata.rs  mod.rs
mugshots/src/: lib.rs
mugshots/src/photo/: image_hash.rs  metadata.rs  mod.rs
mugshots/src/photo/tests/: test.rs
mugshots/src/repository/: mod.rs
mugshots/src/web_crawler/: mod.rs
mugshots/src/web_map/: mod.rs  tokenizer.rs
mugshots/tests/: library_tests.rs  photo_tests.rs  web_crawler_tests.rs
mugshots/tests/testLibraries/: testLibrary.mgst
mugshots/tests/web_crawler/: web_crawler_tests.rs
mugshots/web_crawler/: mod.rs
