#
# Copyright © 2018 Jason Graalum
#
[package]
name = "mugshots"
version = "0.1.0"
authors = ["Jason Graalum <jasongraalum@gmail.com>"]

[dependencies]
image = "*"
uuid = "*"
chrono = "0.4"
sha2 = { git = "https://github.com/RustCrypto/hashes.git" }
digest = { version = "*", features = ["std"]}
arrayref = "*"
reqwest = "0.8.7"
url="1.7.1"
bit-set = "0.4"
html5ever = "0.22.3"


